force-app/main/default/objects/Assessment_Definition__c/Assessment_Definition__c.object-meta.xml
<CustomObject>
    <label>Assessment Definition</label>
    <nameField>
        <label>Assessment Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Definitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>