force-app/main/default/objects/Assessment_Definition__c/fields/Assessment_Definition_Id__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Definition_Id__c</fullName>
    <externalId>true</externalId>
    <label>Assessment Definition Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>