force-app/main/default/objects/Assessment_Definition__c/fields/Delete_Transcript_on_Completion__c.field-meta.xml
<CustomField>
    <fullName>Delete_Transcript_on_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Transcript on Completion</label>
    <type>Checkbox</type>
</CustomField>