force-app/main/default/objects/Assessment_Definition__c/fields/Initial_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Initial_Item_Name__c</fullName>
    <externalId>true</externalId>
    <label>Initial Item Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>